--- a/task-manager-app/package.json
+++ b/task-manager-app/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@graphql-yoga/node": "^3.9.1",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "graphql": "^16.10.0",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "react": "^17.0.2",
