--- a/task-manager-app/package.json
+++ b/task-manager-app/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.2",
     "graphql": "^16.10.0",
     "graphql-yoga": "^5.12.1",
+    "node-fetch": "^3.3.2",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "react": "^17.0.2",
